# kotlin_cpp_test

./: .gitignore  .gitmodules  CMakeLists.txt
src/: jni.ixx  jni_basic_types.ixx  jni_bind.ixx  jnipp.cpp  jnipp.h  source.cpp
src/util/: std.ixx  string_literal.ixx
test/: JniBind.cpp  JniBind.ixx  main.cpp
